# python-core-notes

./: LICENSE  README.md
base/: test_module.py  tests.py
classes/: dataclasses_test.py  descriptors_test.py  example.py  just_classes.py  metaclasses_test.py  mro_diamond_problem.py  singleton_test.py  slots_dict.py
core/: async_test.py  multiprocessing_test.py  threads_test.py  weakref_test.py
fastapi/: main.py  pyproject.toml
fastapi/migrations/: env.py
fastapi/migrations/versions/: 2025_07_18_1720-8d559a382c30_create_users_table.py
fastapi/src/api/: __init__.py
fastapi/src/api/routes/: __init__.py  notes.py  users.py
fastapi/src/core/: config.py
fastapi/src/core/auth/: transport.py
fastapi/src/core/models/: __init__.py  base.py  user.py
fastapi/src/db/: session.py
fastapi/src/schemas/: notes.py  users.py
tests/: gen_vs_iter.py
